Updated collection type for LfuStrategy